fixing various alignment issues

--- a/assets/_styles/core/buttons.scss
+++ b/assets/_styles/core/buttons.scss
@@ -250,6 +250,10 @@ a[class*="action--"][rel="external"] {
 
   %action-box {
     padding: 6px 10px 5px;
+    &.small {
+      @extend %h6;
+      padding: 5px 10px;
+    }
   }
 
   .actions-container select {
