--- a/assets/_styles/core/forms.scss
+++ b/assets/_styles/core/forms.scss
@@ -354,9 +354,9 @@ select,
       @include svg('attachment');
       content: "";
       display: inline-block;
-      height: 20px;
-      width: 20px;
-      margin: 2px 2px -5px -2px;
+      height: 19px;
+      width: 19px;
+      margin: 0px 2px -5px -2px;
     }
   }
   
