--- a/assets/_styles/views/internal/submission.scss
+++ b/assets/_styles/views/internal/submission.scss
@@ -28,7 +28,7 @@
 .attach-comment__button {
   display: inline-block;
   position: absolute;
-  left: 120px;
+  left: 140px;
   top: 0;
   text-align: center;
   white-space: nowrap;
